--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "Websocket-2048",
   "version": "1.0.0",
   "description": "Competitive 2048 game",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "repository": "https://github.com/asomwaru/Websocket-2048.git",
   "author": "asomwaru <asomwaru01@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/server.js",
-    "dev": "nodemon server.ts",
-    "build": " tsc"
+    "start": "tsc && node dist/index.js",
+    "dev": "nodemon ./src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.6",
     "@types/socket.io": "^3.0.2",
+    "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
